# ai

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt  test-requirements.txt
ai_automation/: README.rst  __manifest__.py
ai_automation_openai/: __manifest__.py
ai_bridge_discuss_agent_base/: README.rst  __init__.py  __manifest__.py  hooks.py
ai_connection/: README.rst  __init__.py  __manifest__.py  client.py
ai_connection_openai/: README.rst  __manifest__.py
ai_oca_bridge/: README.rst  __manifest__.py
ai_oca_bridge_chatter/: README.rst  __manifest__.py
ai_oca_bridge_crm_lead/: README.rst  __manifest__.py
ai_oca_bridge_document_page/: README.rst
ai_oca_bridge_extra_parameters/: README.rst  __manifest__.py
ai_oca_bridge_fieldservice/: README.rst  __manifest__.py
ai_oca_bridge_helpdesk_mgmt/: README.rst  __manifest__.py
ai_oca_bridge_hermes/: README.rst  __manifest__.py
ai_oca_bridge_mrp/: README.rst  __manifest__.py
ai_oca_bridge_project/: README.rst  __manifest__.py
ai_oca_bridge_sale/: README.rst  __manifest__.py
ai_oca_bridge_scheduler/: README.rst  __init__.py  __manifest__.py
ai_oca_mcp/: README.rst  __manifest__.py
ai_oca_native_generate_ollama/: README.rst
ai_oca_native_llm/: README.rst  __manifest__.py
ai_oca_native_thread/: README.rst  __manifest__.py
ai_oca_vapi_integration/: README.rst  __manifest__.py
ai_server_action/: README.rst  __manifest__.py
ai_tool/: README.rst  __manifest__.py  tools.py
field_vector_config/: README.rst  (+2 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+346 files in other folders)
