[project]
name = "odoo-addons-oca-ai"
version = "17.0.20250920.0"
dependencies = [
    "odoo-addon-ai_oca_bridge>=17.0dev,<17.1dev",
    "odoo-addon-ai_oca_bridge_document_page>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
