[project]
name = "odoo-addons-oca-ai"
version = "17.0.20250924.0"
dependencies = [
    "odoo-addon-ai_oca_bridge>=17.0dev,<17.1dev",
    "odoo-addon-ai_oca_bridge_document_page>=17.0dev,<17.1dev",
    "odoo-addon-ai_oca_bridge_extra_parameters>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
